# image_common

./: .travis.yml  CMakeLists.txt  README.md  stack.xml
.circleci/: config.yml
camera_calibration_parsers/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
camera_calibration_parsers/include/camera_calibration_parsers/: parse.h  parse.hpp  parse_ini.h  parse_ini.hpp  parse_wrapper.h  parse_yml.h  parse_yml.hpp  visibility_control.hpp
camera_calibration_parsers/include/camera_calibration_parsers/impl/: filesystem_helper.hpp  split.hpp
camera_calibration_parsers/src/: convert.cpp  parse.cpp  parse_ini.cpp  parse_wrapper.cpp  parse_yml.cpp  publish_camera_info.cpp  save_camera_info.cpp
camera_calibration_parsers/src/camera_calibration_parsers/: __init__.py
camera_calibration_parsers/test/: CMakeLists.txt  make_calibs.hpp  parser.py  test_parse_ini.cpp  test_parse_yml.cpp
camera_info_manager/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
camera_info_manager/include/camera_info_manager/: camera_info_manager.h  camera_info_manager.hpp  visibility_control.h
camera_info_manager/src/: camera_info_manager.cpp  filesystem_helper.hpp  split.hpp
camera_info_manager/test/: test_calibration.yaml  test_set_camera_info.py  unit_test.cpp
camera_info_manager/tests/: test_calibration.yaml  unit_test.cpp
image_common/: CHANGELOG.rst  CMakeLists.txt  package.xml
image_transport/: CHANGELOG.rst  CMakeLists.txt  default_plugins.xml  mainpage.dox  manifest.xml  nodelet_plugins.xml  package.xml
image_transport/include/image_transport/: camera_common.h  camera_common.hpp  camera_image_subscriber.h  camera_publisher.h  camera_publisher.hpp  camera_subscriber.h  camera_subscriber.hpp  create_camera_publisher.hpp  create_camera_subscription.hpp  create_publisher.hpp  create_subscription.hpp  exception.h  exception.hpp  exports.h  image_publisher.h  image_subscriber.h  image_subscriber_filter.h  image_transport.h  image_transport.hpp  loader_fwds.h  loader_fwds.hpp  node_interfaces.hpp  nodelet_lazy.h  plugin_publisher.hpp  publisher.h  publisher.hpp  publisher_plugin.h  publisher_plugin.hpp  raw_publisher.h  raw_publisher.hpp  raw_subscriber.h  raw_subscriber.hpp  republish.hpp  simple_publisher_plugin.h  simple_publisher_plugin.hpp  simple_subscriber_plugin.h  simple_subscriber_plugin.hpp  single_subscriber_publisher.h  single_subscriber_publisher.hpp  subscriber.h  (+8 more)
image_transport/src/: camera_common.cpp  camera_image_subscriber.cpp  camera_publisher.cpp  camera_subscriber.cpp  encoder.cpp  image_publisher.cpp  image_subscriber.cpp  image_transport.cpp  list_transports.cpp  manifest.cpp  plugin_publisher.cpp  publisher.cpp  raw_publisher.cpp  raw_subscriber.cpp  republish.cpp  republish_nodelet.cpp  republish_program.cpp  single_subscriber_publisher.cpp  subscriber.cpp  test_image_publisher.cpp  test_publisher.cpp  transform.cpp
image_transport/src/utilities/: utilities.cpp  utilities.hpp
image_transport/test/: test_camera_common.cpp  test_ipc.cpp  test_message_passing.cpp  test_message_passing_lifecycle.cpp  test_publisher.cpp  test_publisher_lifecycle.cpp  test_qos_override.cpp  test_qos_override_lifecycle.cpp  test_remapping.cpp  test_remapping_lifecycle.cpp  test_single_subscriber_publisher.cpp  test_single_subscriber_publisher_lifecycle.cpp  test_subscriber.cpp  test_subscriber_lifecycle.cpp  utils.hpp
image_transport/tutorial/: CMakeLists.txt  package.xml
image_transport/tutorial/include/image_transport_tutorial/: resized_publisher.h  resized_publisher.hpp  resized_subscriber.h  resized_subscriber.hpp
image_transport/tutorial/src/: manifest.cpp  my_publisher.cpp  my_subscriber.cpp  resized_publisher.cpp  resized_subscriber.cpp
image_transport_py/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
image_transport_py/image_transport_py/: __init__.py
image_transport_py/include/image_transport_py/: cast_image.hpp
image_transport_py/src/image_transport_py/: pybind11.hpp  pybind_image_transport.cpp
image_transport_tutorial/: CMakeLists.txt  README.md  package.xml
image_transport_tutorial/include/image_transport_tutorial/: resized_publisher.hpp  resized_subscriber.hpp
image_transport_tutorial/include/image_transport_tutorial/image_transport_tutorial/: resized_publisher.hpp
image_transport_tutorial/src/: manifest.cpp  my_publisher.cpp  my_subscriber.cpp  publisher_from_video.cpp  resized_publisher.cpp  resized_publisher.hpp  resized_subscriber.cpp  resized_subscriber.hpp
polled_camera/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
polled_camera/include/polled_camera/: publication_server.h
polled_camera/src/: poller.cpp  publication_server.cpp
polled_camera/srv/: GetPolledImage.srv
