<package>
  <name>camera_calibration_parsers</name>
  <version>1.9.16</version>
  <description brief="camera_calibration_parsers">
     camera_calibration_parsers contains routines for reading and writing camera calibration parameters.
  </description>
  <author>Patrick Mihelich</author>
  <maintainer email="vrabaud@willowgarage.com">Vincent Rabaud</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/camera_calibration_parsers</url>

  <build_depend>boost</build_depend>
  <build_depend>catkin</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <run_depend>sensor_msgs</run_depend>
  <run_depend>yaml-cpp</run_depend>
</package>
