<package format="2">
  <name>camera_calibration_parsers</name>
  <version>2.3.0</version>
  <description>
     camera_calibration_parsers contains routines for reading and writing camera calibration parameters.
  </description>
  <author>Patrick Mihelich</author>
  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/camera_calibration_parsers</url>
  <url type="bugtracker">https://github.com/ros-perception/image_common/issues</url>
  <url type="repository">https://github.com/ros-perception/image_common</url>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rcpputils</depend>
  <depend>yaml_cpp_vendor</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
