<package>
  <name>camera_info_manager</name>
  <version>1.9.10</version>
  <description brief="Camera calibration information manager">

     This package provides a C++ interface for camera calibration
     information.  It provides CameraInfo, and handles SetCameraInfo
     service requests, saving and restoring the camera calibration
     data.

  </description>
  <author>Jack O'Quin</author>
  <maintainer email="vrabaud@willowgarage.com">Vincent Rabaud</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/camera_info_manager</url>

  <build_depend>boost</build_depend>
  <build_depend>catkin</build_depend>
  <build_depend>camera_calibration_parsers</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>camera_calibration_parsers</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <test_depend>rostest</test_depend>
</package>
