<package format="2">
  <name>image_transport</name>
  <version>1.11.13</version>
  <description>

     image_transport should always be used to subscribe to and publish images. It provides transparent
     support for transporting images in low-bandwidth compressed formats. Examples (provided by separate
     plugin packages) include JPEG/PNG compression and Theora streaming video.

  </description>
  <author>Patrick Mihelich</author>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/image_transport</url>
  <url type="bugtracker">https://github.com/ros-perception/image_common/issues</url>
  <url type="repository">https://github.com/ros-perception/image_common</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>class_loader</depend>
  <depend>rclcpp</depend>
  <depend>message_filters</depend>
  <depend>sensor_msgs</depend>
  <depend>pluginlib</depend>
  <depend>tinyxml_vendor</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <image_transport plugin="${prefix}/default_plugins.xml" />
  </export>
</package>
