<package format="3">
  <name>image_transport_py</name>

  <version>5.0.3</version>

  <description>Python API for image_transport</description>

  <author>Tamas Foldi</author>

  <maintainer email="alejandro@openrobotics.org">Alejandro Hernández</maintainer>
  <maintainer email="john.dangelo@tailos.com">John D'Angelo</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/ros-perception/image_transport</url>
  <url type="bugtracker">https://github.com/ros-perception/image_transport/issues</url>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>python_cmake_module</buildtool_depend>

  <depend>image_transport</depend>
  <depend>pybind11_vendor</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>rpyutils</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
